@@ -17,8 +17,11 @@ postgresql-common (41ubuntu1) dapper; urgency=low
   * PgCommon.pm, change_ugid(): Implement initgroups() like behaviour to allow
     running the postmaster in auxiliary groups. This is necessary for reading
     the snakeoil SSL certificate.
+  * t/TestLib.pm, exec_as(): Also change group id, in order to be able to read
+    SSL certificates which are only group readable (which previously caused
+    the test suite to fail).
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sat,  4 Feb 2006 12:45:09 +0000
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat,  4 Feb 2006 15:10:58 +0000
 
 postgresql-common (41) unstable; urgency=low
 
